--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -46,6 +46,10 @@ faceheight = 85
 name = Alexander H. Færøy
 username = eroyf
 
+[http://kloeri.livejournal.com/data/rss]
+name = Bryan Østergaard
+username = kloeri
+
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
