Tilføjet Peter Makholm.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -43,7 +43,7 @@ faceheight = 85
 
 # Weblogs to aggregate:
 [http://alex.stener.nu/index.php/feed/]
-name = Alexander H. Færøy
+name = Alexander Færøy
 username = eroyf
 
 [http://kloeri.livejournal.com/data/rss]
@@ -53,6 +53,10 @@ username = kloeri
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
+
+[http://peter.makholm.net/feed/]
+name = Peter Makholm
+username = brother
 
 #[goat]
 #name = goat goat
