Tilføjet pusling.png til pusling og eroyf.png til eroyf.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -45,6 +45,7 @@ faceheight = 85
 [http://alex.stener.nu/index.php/feed/]
 name = Alexander Færøy
 username = eroyf
+face = eroyf.png
 
 [http://kloeri.livejournal.com/data/rss]
 name = Bryan Østergaard
@@ -53,6 +54,7 @@ username = kloeri
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
+face = pusling.png
 
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
