Tilføjet facewidth og faceheight til eroyf.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -46,6 +46,8 @@ faceheight = 85
 name = Alexander Færøy
 username = eroyf
 face = eroyf.png
+facewidth = 74
+faceheight = 100
 
 [http://kloeri.livejournal.com/data/rss]
 name = Bryan Østergaard
