let us alphabetize pr first name

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -1,3 +1,4 @@
+# vim: set enc=utf-8
 # Planet configuration file
 
 # Every planet needs a [Planet] section
@@ -53,14 +54,14 @@ faceheight = 100
 name = Bryan Østergaard
 username = kloeri
 
+[http://peter.makholm.net/feed/]
+name = Peter Makholm
+username = brother
+
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
 face = pusling.png
-
-[http://peter.makholm.net/feed/]
-name = Peter Makholm
-username = brother
 
 #[goat]
 #name = goat goat
