add pto version2 blog

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -45,7 +45,7 @@ faceheight = 85
 # Weblogs to aggregate:
 [http://alex.stener.nu/index.php/feed/]
 name = Alexander Færøy
-username = eroyf
+username = eroyfse.cx
 face = eroyf.png
 facewidth = 74
 faceheight = 100
@@ -57,6 +57,10 @@ username = kloeri
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
 username = brother
+
+[http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
+name = Peter Toft
+username = pto
 
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
