--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -61,6 +61,7 @@ username = brother
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
 name = Peter Toft
 username = pto
+face = pto.png
 
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
