--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -54,6 +54,10 @@ faceheight = 100
 name = Bryan Østergaard
 username = kloeri
 
+[http://jesper.krogh.cc/?feed=rss2&cat=3]
+Name = Jesper Krogh
+username = jesper
+
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
 username = brother
