jespers pretty face

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -57,6 +57,7 @@ username = kloeri
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
 username = jesper
+face = jesper.png
 
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
