--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -54,6 +54,10 @@ faceheight = 100
 name = Bryan Østergaard
 username = kloeri
 
+[http://www.mamatux.dk/xml/rss20/feed.xml]
+name = Gitte Wange
+username = MamaTux
+
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
 username = jesper
