gitte pretty face

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -57,6 +57,7 @@ username = kloeri
 [http://www.mamatux.dk/xml/rss20/feed.xml]
 name = Gitte Wange
 username = MamaTux
+face = gitte.png
 
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
