--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -64,6 +64,12 @@ Name = Jesper Krogh
 username = jesper
 face = jesper.png
 
+[http://www.kjoller.eu/?cat=7&feed=rss2]
+Name = Niels Kjøller Hansen
+face = nkh-gotchi.jpg
+username = gnomonic
+
+
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
 username = brother
