velkommen til kenneth

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -64,6 +64,11 @@ Name = Jesper Krogh
 username = jesper
 face = jesper.png
 
+[http://www.computerworld.dk/rss/blog/nerd]
+Name = Kenneth Geisshirt
+face = Kenneth_Geisshirt.png
+usuername = kneth
+
 [http://www.kjoller.eu/?cat=7&feed=rss2]
 Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
