mere utf8-fuckup. argf

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -70,7 +70,7 @@ face = Kenneth_Geisshirt.png
 usuername = kneth
 
 [http://www.kjoller.eu/?cat=7&feed=rss2]
-Name = Niels Kjøller Hansen
+Name = Niels KjÃ¸ller Hansen
 face = nkh-gotchi.jpg
 username = gnomonic
 
