brotherrs "pretty" face

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -78,6 +78,7 @@ username = gnomonic
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
 username = brother
+face = brother.png
 
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
 name = Peter Toft
