grr typo in usuername

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -67,7 +67,7 @@ face = jesper.png
 [http://www.computerworld.dk/rss/blog/nerd]
 Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
-usuername = kneth
+username = kneth
 
 [http://www.kjoller.eu/?cat=7&feed=rss2]
 Name = Niels Kjøller Hansen
