--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -59,6 +59,11 @@ name = Gitte Wange
 username = MamaTux
 face = gitte.png
 
+[http://blog.brixandersen.dk/?feed=rss2]
+name = Henrik Brix Andersen
+username = brix
+face = brix.jpg
+
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
 username = jesper
@@ -73,7 +78,6 @@ username = kneth
 Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
 username = gnomonic
-
 
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
