--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -45,7 +45,7 @@ faceheight = 85
 # Weblogs to aggregate:
 [http://alex.stener.nu/index.php/feed/]
 name = Alexander Færøy
-username = eroyfse.cx
+username = eroyf
 face = eroyf.png
 facewidth = 74
 faceheight = 100
