Tilføjet SSLUG rss2.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -94,6 +94,9 @@ name = Sune Vuorela
 username = pusling
 face = pusling.png
 
+[http://sslug.dk/adict/adict2.rss?organizer=SSLUG]
+name = SSLUG
+
 #[goat]
 #name = goat goat
 #username = goat
