velkommen til sparre

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -64,6 +64,11 @@ name = Henrik Brix Andersen
 username = brix
 face = brix.jpg
 
+[http://edb.jacob-sparre.dk/sslug-blog.rss2]
+Name = Jacob Sparre Andersen
+username = sparre
+face = sparre.jpg
+
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
 username = jesper
