--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -67,7 +67,7 @@ face = brix.jpg
 [http://edb.jacob-sparre.dk/sslug-blog.rss2]
 Name = Jacob Sparre Andersen
 username = sparre
-face = sparre.jpg
+face = sparre.png
 
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 Name = Jesper Krogh
