--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -102,6 +102,11 @@ face = pusling.png
 [http://sslug.dk/front/sidstenyt.rss]
 name = SSLUG
 
+[http://spejlvendt.dk/?feed=rss2&cat=6]
+name = Jesper Nyerup
+username = nyerup
+face = nyerup.png
+
 #[goat]
 #name = goat goat
 #username = goat
