add andreas bach aaen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -50,6 +50,9 @@ face = eroyf.png
 facewidth = 74
 faceheight = 100
 
+[http://www.bachaaen.dk/?feed=rss2]
+name =  Andreas Bach Aaen
+
 [http://kloeri.livejournal.com/data/rss]
 name = Bryan Østergaard
 username = kloeri
