--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -87,6 +87,10 @@ Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
 username = gnomonic
 
+[http://new.czar.dk/?feed=rss2]
+name = Peter Larsen
+username = czar
+
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
 username = brother
