add czar's pretty face

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -90,6 +90,7 @@ username = gnomonic
 [http://new.czar.dk/?feed=rss2]
 name = Peter Larsen
 username = czar
+face = czar.png
 
 [http://peter.makholm.net/feed/]
 name = Peter Makholm
