Added peter v2 makholm.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -97,6 +97,11 @@ name = Peter Makholm
 username = brother
 face = brother.png
 
+[http://www.version2.dk/feeds/blogs/petermakholm]
+name = Peter Makholm
+username = brother
+face = brother.png
+
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
 name = Peter Toft
 username = pto
