velkommen til planet opensource

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -7,11 +7,11 @@
 # link: Link to the main page
 # owner_name: Your name
 # owner_email: Your e-mail address
-name = Planet SSLUG
+name = Planet OpenSource DK
 link = http://planet.sslug.dk/
 owner_name = Alexander Færøy
 owner_email = eroyf@gentoo.org
-description = Welcome to <b>Planet SSLUG</b>, an aggregation of SSLUG-related weblogs.
+description = Welcome to <b>Planet OpenSource DK</b>, an aggregation of danish open source related weblogs.
 
 # cache_directory: Where cached feeds are stored
 # log_level: One of DEBUG, INFO, WARNING, ERROR or CRITICAL
