--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -115,6 +115,10 @@ face = pusling.png
 [http://sslug.dk/front/sidstenyt.rss]
 name = SSLUG
 
+[http://blogs.freebsdish.org/xride/comments/feed/]
+name = Søren Straarup
+username = Xride
+
 [http://spejlvendt.dk/?feed=rss2&cat=6]
 name = Jesper Nyerup
 username = nyerup
