--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -107,6 +107,10 @@ name = Peter Toft
 username = pto
 face = pto.png
 
+[http://www.version2.dk/modules/fsArticle/rss.php?source=-21]
+name = Poul-Henning Kamp
+username = phk
+
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
