--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -110,6 +110,7 @@ face = pto.png
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-21]
 name = Poul-Henning Kamp
 username = phk
+face = phk.png
 
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
