--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -67,6 +67,10 @@ name = Henrik Brix Andersen
 username = brix
 face = brix.jpg
 
+[http://blog.kramse.dk/blojsom/blog/default/?flavor=rss2]
+name = Henrik Lund Kramshøj
+username = hlkv6
+
 [http://edb.jacob-sparre.dk/sslug-blog.rss2]
 Name = Jacob Sparre Andersen
 username = sparre
