--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -81,6 +81,11 @@ Name = Jesper Krogh
 username = jesper
 face = jesper.png
 
+[http://spejlvendt.dk/?feed=rss2]
+name = Jesper Nyerup
+username = nyerup
+face = nyerup.png
+
 [http://www.computerworld.dk/rss/blog/nerd]
 Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
@@ -128,10 +133,10 @@ name = SSLUG
 name = Søren Straarup
 username = Xride
 
-[http://spejlvendt.dk/?feed=rss2]
-name = Jesper Nyerup
-username = nyerup
-face = nyerup.png
+[http://arkolog.dk/?feed=rss2]
+name = Thomas Alexander Frederiksen
+username = Theo a.k.a. Thuba a.k.a. Tuba
+
 
 #[goat]
 #name = goat goat
