--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -91,6 +91,9 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
+Name = Nikolaj Hald Nielsen
+
 [http://www.kjoller.eu/?cat=7&feed=rss2]
 Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
