--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -50,6 +50,10 @@ face = eroyf.png
 facewidth = 74
 faceheight = 100
 
+[http://ossowicki.com/?feed=rss2]
+name = Anders Ossowicki
+username = arkanoid
+
 [http://www.bachaaen.dk/blog/?feed=rss2]
 name =  Andreas Bach Aaen
 
