--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -128,6 +128,10 @@ name = Poul-Henning Kamp
 username = phk
 face = phk.png
 
+[http://home.coming.dk/xmlsrv/rss2.php?blog=5&cat=22]
+name = Sune Kloppenborg Jeppesen
+username = jaervosz
+
 [http://pusling.com/blog/?feed=rss2]
 name = Sune Vuorela
 username = pusling
