tilføjet endnu en kde gut. oh dear.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -81,9 +81,13 @@ username = sparre
 face = sparre.png
 
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
-Name = Jesper Krogh
+name = Jesper Krogh
 username = jesper
 face = jesper.png
+
+[http://www.kdedevelopers.org/blog/1397/feed]
+name = Jesper K. Pedersen
+username = blackie
 
 [http://spejlvendt.dk/?feed=rss2]
 name = Jesper Nyerup
