--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -75,10 +75,10 @@ face = brix.jpg
 name = Henrik Lund Kramshøj
 username = hlkv6
 
-[http://edb.jacob-sparre.dk/sslug-blog.rss2]
-Name = Jacob Sparre Andersen
-username = sparre
-face = sparre.png
+#[http://edb.jacob-sparre.dk/sslug-blog.rss2]
+#Name = Jacob Sparre Andersen
+#username = sparre
+#face = sparre.png
 
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 name = Jesper Krogh
