add leif lohdal

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -99,6 +99,9 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://lodahl.blogspot.com/feeds/posts/default]
+Name = Leif Lodahl
+
 [http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
 Name = Nikolaj Hald Nielsen
 
