tilføjet sparre igen, tilføjet grrrr

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -57,6 +57,10 @@ username = arkanoid
 [http://www.bachaaen.dk/blog/?feed=rss2]
 name =  Andreas Bach Aaen
 
+[http://blog.tobez.org/?feed=rss2]
+name = Anton Berezin
+username = Grrrr
+
 [http://kloeri.livejournal.com/data/rss]
 name = Bryan Østergaard
 username = kloeri
@@ -75,10 +79,10 @@ face = brix.jpg
 name = Henrik Lund Kramshøj
 username = hlkv6
 
-#[http://edb.jacob-sparre.dk/sslug-blog.rss2]
-#Name = Jacob Sparre Andersen
-#username = sparre
-#face = sparre.png
+[http://edb.jacob-sparre.dk/sslug-blog.rss2]
+Name = Jacob Sparre Andersen
+username = sparre
+face = sparre.png
 
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 name = Jesper Krogh
