--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -151,6 +151,10 @@ face = pusling.png
 [http://sslug.dk/front/sidstenyt.rss]
 name = SSLUG
 
+[http://soeren-hansen.dk/category/open-source/feed]
+name = Søren Hansen
+username = bonde
+
 [http://blogs.freebsdish.org/xride/feed/]
 name = Søren Straarup
 username = Xride
