add Martin von Haller

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -114,6 +114,12 @@ Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
 username = gnomonic
 
+[http://suse.groenbaek.net/openlife/feed/]
+Name = Martin von Haller
+
+[http://www.computerworld.dk/rss/blog/blogger/31313]
+Name = Martin von Haller
+
 [http://new.czar.dk/?feed=rss2]
 name = Peter Larsen
 username = czar
