tilføjet søren hansen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -161,6 +161,11 @@ name = SSLUG
 name = Søren Hansen
 username = bonde
 
+[http://warma.dk/blog/feeds/category/PlanetOpensourceDk/]
+name = Søren Hansen
+username = shawarma
+face = shawarma.png
+
 [http://blogs.freebsdish.org/xride/feed/]
 name = Søren Straarup
 username = Xride
