--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -170,6 +170,10 @@ face = shawarma.png
 name = Søren Straarup
 username = Xride
 
+[http://planet.gentoo.org/developers/bangert?tempskin=_rss2]
+name = Thilo Bangert
+username = bangert
+
 [http://arkolog.dk/?feed=rss2]
 name = Thomas Alexander Frederiksen
 username = Theo a.k.a. Thuba a.k.a. Tuba
