added peter rude

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -135,6 +135,9 @@ name = Peter Makholm
 username = brother
 face = brother.png
 
+[http://www.rude.net/blog/?feed=rss2]
+name = Peter Rude
+
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
 name = Peter Toft
 username = pto
