--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -65,6 +65,9 @@ username = Grrrr
 name = Bryan Østergaard
 username = kloeri
 
+[http://www.computerworld.dk/rss/blog/linuxblog]
+name = Christina Rudkjøbing
+
 [http://www.mamatux.dk/xml/rss20/feed.xml]
 name = Gitte Wange
 username = MamaTux
@@ -180,6 +183,10 @@ username = bangert
 [http://arkolog.dk/?feed=rss2]
 name = Thomas Alexander Frederiksen
 username = Theo a.k.a. Thuba a.k.a. Tuba
+
+[http://tdekov.wordpress.com/feed/]
+name = Thor Dekov Buur
+username = tdekov
 
 
 #[goat]
