--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -65,6 +65,9 @@ username = Grrrr
 name = Bryan Østergaard
 username = kloeri
 
+[http://chrsen.dk/fundanemt/files/rss-feeds/Forsiden.rss]
+name = Christian Hansen
+
 [http://www.computerworld.dk/rss/blog/linuxblog]
 name = Christina Rudkjøbing
 
