--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -117,6 +117,9 @@ Name = Niels Kjøller Hansen
 face = nkh-gotchi.jpg
 username = gnomonic
 
+[http://mschlander.wordpress.com/feed/]
+Name = Martin Schlander
+
 [http://suse.groenbaek.net/openlife/feed/]
 Name = Martin von Haller
 
