--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -65,6 +65,10 @@ username = Grrrr
 name = Bryan Østergaard
 username = kloeri
 
+[http://amarok.kde.org/blog/categories/9-leinir]
+name = Dan Leinir Turthra Jensen
+username = leinir
+
 [http://www.computerworld.dk/rss/blog/linuxblog]
 name = Christina Rudkjøbing
 
