add anders lund

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -50,6 +50,10 @@ face = eroyf.png
 facewidth = 74
 faceheight = 100
 
+[http://www.alweb.dk/taxonomy/term/25/0/feed]
+name = Anders Lund 
+username = sredna
+
 [http://ossowicki.com/?feed=rss2]
 name = Anders Ossowicki
 username = arkanoid
