Add josef assad

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -109,6 +109,9 @@ name = Jesper Nyerup
 username = nyerup
 face = nyerup.png
 
+[http://www.sancairodicopenhagen.com/joe/rss.xml]
+name = Josef Assad
+
 [http://www.computerworld.dk/rss/blog/nerd]
 Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
