--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -69,6 +69,9 @@ username = Grrrr
 name = Bryan Østergaard
 username = kloeri
 
+[http://www.bitbybit.dk/carsten/blog/wp-rss2.php?cat=2]
+name = Carsten Pedersen
+
 [http://www.computerworld.dk/rss/blog/linuxblog]
 name = Christina Rudkjøbing
 
