--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -163,6 +163,9 @@ name = Peter Toft
 username = pto
 face = pto.png
 
+[http://x0.dk/rants/index.rss]
+name = Phil Regnauld
+
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-21]
 name = Poul-Henning Kamp
 username = phk
