--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -180,8 +180,8 @@ name = Sune Vuorela
 username = pusling
 face = pusling.png
 
-[http://sslug.dk/front/sidstenyt.rss]
-name = SSLUG
+#[http://sslug.dk/front/sidstenyt.rss]
+#name = SSLUG
 
 [http://soeren-hansen.dk/category/open-source/feed]
 name = Søren Hansen
