--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -79,6 +79,9 @@ name = Christina Rudkjøbing
 name = Dan Leinir Turthra Jensen
 username = leinir
 
+[http://blog.droso.org/feed?category_name=FreeBSD]
+name = Erwin Lansing
+
 [http://www.mamatux.dk/xml/rss20/feed.xml]
 name = Gitte Wange
 username = MamaTux
