fix0r min rss feed + skifter owner email og navn

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -9,8 +9,8 @@
 # owner_email: Your e-mail address
 name = Planet OpenSource DK
 link = http://planet.sslug.dk/
-owner_name = Alexander Færøy
-owner_email = eroyf@gentoo.org
+owner_name = SSLUG
+owner_email = planet@opensource.dk
 description = Welcome to <b>Planet OpenSource DK</b>, an aggregation of danish open source related weblogs.
 
 # cache_directory: Where cached feeds are stored
@@ -43,7 +43,7 @@ facewidth = 65
 faceheight = 85
 
 # Weblogs to aggregate:
-[http://www.eroyf.org/index.php/feed/]
+[http://eroyf.org/index.php?/feeds/index.rss2]
 name = Alexander Færøy
 username = eroyf
 face = eroyf.png
