--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -71,6 +71,7 @@ username = kloeri
 
 [http://www.modspil.dk/itpolitik/index.atom]
 name = Carsten Agger
+face = agger.gif
 
 [http://www.bitbybit.dk/carsten/blog/wp-rss2.php?cat=2]
 name = Carsten Pedersen
