--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -147,6 +147,9 @@ Name = Martin von Haller
 [http://www.computerworld.dk/rss/blog/blogger/31313]
 Name = Martin von Haller
 
+[http://www.blogger.com/feeds/8616610987649128333/posts/default]
+name = Peter Hansteen
+
 [http://tyge.sslug.dk/~eroyf/czar.rss2]
 name = Peter Larsen
 username = czar
