hackergotchi og nick for Martin Schlander

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -140,6 +140,8 @@ username = gnomonic
 
 [http://mschlander.wordpress.com/feed/]
 Name = Martin Schlander
+face = cb400f.png
+username = cb400f
 
 [http://suse.groenbaek.net/openlife/feed/]
 Name = Martin von Haller
