added christian sejersen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -72,6 +72,9 @@ username = kloeri
 [http://www.bitbybit.dk/carsten/blog/wp-rss2.php?cat=2]
 name = Carsten Pedersen
 
+[http://www.christiansejersen.com/blog/feed/]
+name = Christian Sejersen
+
 [http://www.computerworld.dk/rss/blog/linuxblog]
 name = Christina Rudkjøbing
 
