--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -8,7 +8,7 @@
 # owner_name: Your name
 # owner_email: Your e-mail address
 name = Planet OpenSource DK
-link = http://planet.sslug.dk/
+link = http://planet.opensource.dk/
 owner_name = SSLUG
 owner_email = planet@opensource.dk
 description = Welcome to <b>Planet OpenSource DK</b>, an aggregation of danish open source related weblogs.
