--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -27,7 +27,7 @@ template_files = templates/index.html.tmpl templates/rss20.xml.tmpl templates/op
 # days_per_page: How many complete days of posts to put on each page
 #                This is the absolute, hard limit (over the item limit)
 # date_format: strftime format for the default 'date' template variable
-output_dir = /home/www/planet.sslug.dk/htdocs/
+output_dir = /home/www/planet.opensource.dk/htdocs/
 items_per_page = 50
 days_per_page = 0
 date_format = %B %d, %Y, %H:%M %Z
