--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -86,7 +86,7 @@ username = leinir
 name = Erwin Lansing
 
 [http://www.mamatux.dk/xml/rss20/feed.xml]
-name = Gitte Wange
+name = Gitte Wange Olrik
 username = MamaTux
 face = gitte.png
 
