--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -126,6 +126,10 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://lasg.dk/blog/category/open-source/feed]
+name = Lars Sommer
+username = lasg
+
 [http://lodahl.blogspot.com/feeds/posts/default]
 Name = Leif Lodahl
 
