--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -186,6 +186,9 @@ name = Poul-Henning Kamp
 username = phk
 face = phk.png
 
+[http://blogs.sun.com/cphcampus/feed/entries/rss]
+name = Sidsel Jensen
+
 [http://home.coming.dk/xmlsrv/rss2.php?blog=5&cat=22]
 name = Sune Kloppenborg Jeppesen
 username = jaervosz
