added quasi, skift til hovedfeed for niels, alfabetisering

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -133,13 +133,9 @@ username = lasg
 [http://lodahl.blogspot.com/feeds/posts/default]
 Name = Leif Lodahl
 
-[http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
-Name = Nikolaj Hald Nielsen
-
-[http://www.kjoller.eu/?cat=7&feed=rss2]
-Name = Niels Kjøller Hansen
-face = nkh-gotchi.jpg
-username = gnomonic
+[http://soulfood.dk/atom.xml]
+Name = Mads Toftum
+username = quasi
 
 [http://mschlander.wordpress.com/feed/]
 Name = Martin Schlander
@@ -151,6 +147,14 @@ Name = Martin von Haller
 
 [http://www.computerworld.dk/rss/blog/blogger/31313]
 Name = Martin von Haller
+
+[http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
+Name = Nikolaj Hald Nielsen
+
+[http//www.kjoller.eu/?feed=rss2]
+Name = Niels Kjøller Hansen
+face = nkh-gotchi.jpg
+username = gnomonic
 
 [http://www.blogger.com/feeds/8616610987649128333/posts/default]
 name = Peter Hansteen
