--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -75,6 +75,10 @@ name = Carsten Pedersen
 [http://www.christiansejersen.com/blog/feed/]
 name = Christian Sejersen
 
+[http://www.technobabble.dk/feeds/latest/]
+name = Christian Jørgensen
+username = razor
+
 [http://www.computerworld.dk/rss/blog/linuxblog]
 name = Christina Rudkjøbing
 
