added Kristian Nielsen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -130,6 +130,9 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://kristiannielsen.livejournal.com/data/atom]
+Name = Kristian Nielsen
+
 [http://lasg.dk/blog/category/open-source/feed]
 name = Lars Sommer
 username = lasg
