Tilføj ahf til nickname

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -45,7 +45,7 @@ faceheight = 85
 # Weblogs to aggregate:
 [http://ahfaeroey.wordpress.com/atom/]
 name = Alexander Færøy
-username = eroyf
+username = ahf a.k.a. eroyf
 face = eroyf.png
 facewidth = 74
 faceheight = 101
