add sman og freso

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -89,6 +89,14 @@ username = leinir
 [http://blog.droso.org/feed?category_name=FreeBSD]
 name = Erwin Lansing
 
+[http://freso.dk/da/category/life_the_universe_and_everything/planet_opensource/feed]
+name = Frederik S. Olesen
+username = Freso
+
+[http://sman.dk/sman/blog/?feed=rss2]
+name = Georg Sluyterman
+username = sman
+
 [http://www.mamatux.dk/xml/rss20/feed.xml]
 name = Gitte Wange Olrik
 username = MamaTux
