--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -160,8 +160,8 @@ username = cb400f
 [http://suse.groenbaek.net/openlife/feed/atom/?cat=7,8,24,32,34,37,38,39,40,41]
 Name = Martin von Haller
 
-[http://www.computerworld.dk/rss/blog/blogger/31313]
-Name = Martin von Haller
+# [http://www.computerworld.dk/rss/blog/blogger/31313]
+# Name = Martin von Haller
 
 [http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
 Name = Nikolaj Hald Nielsen
