--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -138,6 +138,10 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://blog.klavsen.info/rss.xml]
+name = Klavs Klavsen
+username = FiXion a.k.a. Linuxpusher
+
 [http://kristiannielsen.livejournal.com/data/atom]
 Name = Kristian Nielsen
 
