--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -125,6 +125,10 @@ face = jesper.png
 name = Jesper K. Pedersen
 username = blackie
 
+[http://jlouisramblings.blogspot.com/feeds/posts/default]
+name = Jesper Louis Andersen
+username = jlouis
+
 [http://blog.jespernyerup.dk/feed/]
 name = Jesper Nyerup
 username = nyerup
