added peter rude, martin pihl, nick for Nikolaj Hald Nielsen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -160,6 +160,9 @@ Name = Leif Lodahl
 Name = Mads Toftum
 username = quasi
 
+[http://martinpihl.dk/words/feed]
+Name = Martin Pihl
+
 [http://mschlander.wordpress.com/atom/]
 Name = Martin Schlander
 face = cb400f.png
@@ -173,6 +176,7 @@ Name = Martin von Haller
 
 [http://amarok.kde.org/blog/feeds/categories/18-freespirit.rss]
 Name = Nikolaj Hald Nielsen
+username = nhnFreespirit
 
 [http://kjoller.eu/blog/feeds/seneste/]
 Name = Niels Kjøller Hansen
@@ -196,6 +200,9 @@ face = brother.png
 name = Peter Makholm
 username = brother
 face = brother.png
+
+[http://www.rude.net/blog/?feed=atom]
+name = Peter Rude
 
 [http://www.version2.dk/modules/fsArticle/rss.php?source=-22]
 name = Peter Toft
