fix fixions face

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -145,6 +145,7 @@ username = kneth
 [http://blog.klavsen.info/rss.xml]
 name = Klavs Klavsen
 username = FiXion a.k.a. Linuxpusher
+face = fixion.png
 
 [http://kristiannielsen.livejournal.com/data/atom]
 Name = Kristian Nielsen
