Prepare for me fucking around with the planet theme.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -19,7 +19,7 @@ cache_directory = cache
 log_level = DEBUG
 
 # template_files: Space-separated list of output template files
-template_files = templates/index.html.tmpl templates/rss20.xml.tmpl templates/opml.xml.tmpl templates/atom.xml.tmpl templates/sslug.frontpage.tmpl
+template_files = templates/index.html.tmpl templates/rss20.xml.tmpl templates/opml.xml.tmpl templates/atom.xml.tmpl templates/sslug.frontpage.tmpl templates/ahf.html.tmpl
 
 # The following provide defaults for each template:
 # output_dir: Directory to place output files
