added kenneth christiansen plus jesper jarlskov

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -116,6 +116,9 @@ Name = Jacob Sparre Andersen
 username = sparre
 face = sparre.png
 
+[http://jesperjarlskov.dk/feed/]
+Name = Jesper Jarlskov
+
 [http://jesper.krogh.cc/?feed=rss2&cat=3]
 name = Jesper Krogh
 username = jesper
@@ -136,6 +139,9 @@ face = nyerup.png
 
 [http://sancairodicopenhagen.com/joe/taxonomy/term/7/0/feed]
 name = Josef Assad
+
+[http://codeposts.blogspot.com/feeds/posts/default]
+Name = Kenneth Christiansen
 
 [http://blog.geekclub.dk/author/kneth/feed/]
 Name = Kenneth Geisshirt
