remove mamatux for now

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -97,10 +97,10 @@ username = Freso
 name = Georg Sluyterman
 username = sman
 
-[http://www.mamatux.dk/xml/rss20/feed.xml]
-name = Gitte Wange Olrik
-username = MamaTux
-face = gitte.png
+# [http://www.mamatux.dk/xml/rss20/feed.xml]
+# name = Gitte Wange Olrik
+# username = MamaTux
+# face = gitte.png
 
 [http://blog.brixandersen.dk/?feed=rss2]
 name = Henrik Brix Andersen
