Add my new blag.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -50,6 +50,13 @@ face = eroyf.png
 facewidth = 74
 faceheight = 101
 
+[http://bach.exherbo.org/~ahf/blog/index.atom]
+name = Alexander Færøy
+username = ahf a.k.a. eroyf
+face = eroyf.png
+facewidth = 74
+faceheight = 101
+
 [http://www.alweb.dk/taxonomy/term/25/0/feed]
 name = Anders Lund 
 username = sredna
