--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -246,6 +246,9 @@ face = pusling.png
 #[http://sslug.dk/front/sidstenyt.rss]
 #name = SSLUG
 
+[http://compadre.dk/blog/category/open-source-dk/feed/atom/]
+name = Søren Bredlund Caspersen
+
 [http://soeren-hansen.dk/category/opensource/feed/]
 name = Søren Hansen
 username = bonde
