added phomes (gnome games maintainer)

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -270,6 +270,10 @@ username = bangert
 name = Thomas Alexander Frederiksen
 username = Theo a.k.a. Thuba a.k.a. Tuba
 
+[http://blogs.gnome.org/phomes/feed/atom/]
+name = Thomas H.P. Andersen
+username = phomes
+
 [http://tdekov.wordpress.com/feed/]
 name = Thor Dekov Buur
 username = tdekov
