--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -96,6 +96,10 @@ username = leinir
 [http://blog.droso.org/feed?category_name=FreeBSD]
 name = Erwin Lansing
 
+[http://blog.batmule.dk/cgi-bin/mt/mt-search.cgi?tag=osdk&Template=feed&IncludeBlogs=2&limit=20]
+name = Flemming Jacobsen
+username = F3
+
 [http://freso.dk/da/planet/opensource_dk/feed]
 name = Frederik S. Olesen
 username = Freso
