added martin hansen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -178,6 +178,9 @@ Name = Leif Lodahl
 Name = Mads Toftum
 username = quasi
 
+[http://www.cfsi.dk/Files/Filer/Weblog/rss/6.xml]
+Name = Martin Hansen
+
 [http://martinpihl.dk/words/feed]
 Name = Martin Pihl
 
