added blackies cw-blog

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -135,6 +135,10 @@ name = Jesper Krogh
 username = jesper
 face = jesper.png
 
+[http://www.computerworld.dk/rss/blog/blogger/172879]
+name = Jesper K. Pedersen
+username = blackie
+
 [http://www.kdedevelopers.org/blog/1397/feed]
 name = Jesper K. Pedersen
 username = blackie
