væk med sparre. igen igen.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -115,10 +115,10 @@ face = brix.jpg
 name = Henrik Lund Kramshøj
 username = hlkv6
 
-[http://edb.jacob-sparre.dk/sslug-blog.rss2]
-name = Jacob Sparre Andersen
-username = sparre
-face = sparre.png
+#[http://edb.jacob-sparre.dk/sslug-blog.rss2]
+#name = Jacob Sparre Andersen
+#username = sparre
+#face = sparre.png
 
 [http://jesperjarlskov.dk/feed/]
 Name = Jesper Jarlskov
