--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -86,6 +86,10 @@ name = Christina Rudkjøbing
 name = Dan Leinir Turthra Jensen
 username = leinir
 
+[http://blog.fubar.dk/?feed=rss2]
+name = David Zeuthen
+username = davidz
+
 [http://blog.droso.org/feed?category_name=FreeBSD]
 name = Erwin Lansing
 
@@ -160,6 +164,9 @@ username = kneth
 name = Klavs Klavsen
 username = FiXion a.k.a. Linuxpusher
 face = fixion.png
+
+[http://hoegsberg.blogspot.com/feeds/posts/default?alt=rss]
+name = Kristian Høgsberg
 
 [http://kristiannielsen.livejournal.com/data/atom]
 Name = Kristian Nielsen
@@ -261,6 +268,9 @@ username = bonde
 name = Søren Hansen
 username = shawarma
 face = shawarma.png
+
+[http://www.advogato.org/person/ssp/rss.xml]
+name = Søren Sandmann
 
 [http://blogs.freebsdish.org/xride/feed/]
 name = Søren Straarup
