added cw feed for kneth

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -160,6 +160,11 @@ Name = Kenneth Geisshirt
 face = Kenneth_Geisshirt.png
 username = kneth
 
+[http://www.computerworld.dk/rss/blog/nerd]
+Name = Kenneth Geisshirt
+face = Kenneth_Geisshirt.png
+username = kneth
+
 [http://blog.klavsen.info/rss.xml]
 name = Klavs Klavsen
 username = FiXion a.k.a. Linuxpusher
