added mosehansen + kramse.dk -> kramse.org

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -93,6 +93,9 @@ username = davidz
 [http://blog.droso.org/feed?category_name=FreeBSD]
 name = Erwin Lansing
 
+[http://mosehansen.dk/blog/articles.rss]
+name = Esben Mose Hansen
+
 [http://blog.batmule.dk/cgi-bin/mt/mt-search.cgi?tag=osdk&Template=feed&IncludeBlogs=2&limit=20]
 name = Flemming Jacobsen
 username = F3
@@ -115,7 +118,7 @@ name = Henrik Brix Andersen
 username = brix
 face = brix.jpg
 
-[http://blog.kramse.dk/blojsom/blog/default/?flavor=rss2]
+[http://blog.kramse.org/blojsom/blog/default/?flavor=rss2]
 name = Henrik Lund Kramshøj
 username = hlkv6
 
