--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -1,4 +1,4 @@
-# vim: set enc=utf-8
+http://www.lexlinux.dk/?feed=rss2v# vim: set enc=utf-8
 # Planet configuration file
 
 # Every planet needs a [Planet] section
@@ -202,7 +202,10 @@ face = cb400f.png
 username = cb400f
 
 [http://www.openlife.dk/?feed=atom]
-Name = Martin von Haller
+Name = Martin von Haller Grænbæk
+
+[http://www.lexlinux.dk/?feed=rss2]
+Name = Martin von Haller Grønbæk
 
 # [http://www.computerworld.dk/rss/blog/blogger/31313]
 # Name = Martin von Haller
