doh.. graebaek -> groenbaek

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -202,7 +202,7 @@ face = cb400f.png
 username = cb400f
 
 [http://www.openlife.dk/?feed=atom]
-Name = Martin von Haller Grænbæk
+Name = Martin von Haller Grønbæk
 
 [http://www.lexlinux.dk/?feed=rss2]
 Name = Martin von Haller Grønbæk
