Fix someones fuckup

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -1,4 +1,4 @@
-http://www.lexlinux.dk/?feed=rss2v# vim: set enc=utf-8
+# vim: set enc=utf-8
 # Planet configuration file
 
 # Every planet needs a [Planet] section
