--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -56,7 +56,7 @@ username = sredna
 
 [http://ossowicki.com/?feed=rss2]
 name = Anders Ossowicki
-username = arkanoid
+username = aowi
 
 [http://www.bachaaen.dk/blog/?feed=rss2]
 name =  Andreas Bach Aaen
