--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -127,6 +127,9 @@ username = hlkv6
 #username = sparre
 #face = sparre.png
 
+[http://netoptimizer.blogspot.com/feeds/posts/default?rss]
+name = Jesper Dangaard Brouer
+
 [http://jesperjarlskov.dk/feed/]
 Name = Jesper Jarlskov
 
