comment out kenneth geisshirt

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -161,15 +161,15 @@ name = Josef Assad
 [http://codeposts.blogspot.com/feeds/posts/default]
 Name = Kenneth Christiansen
 
-[http://blog.geekclub.dk/author/kneth/feed/]
-Name = Kenneth Geisshirt
-face = Kenneth_Geisshirt.png
-username = kneth
+# [http://blog.geekclub.dk/author/kneth/feed/]
+# Name = Kenneth Geisshirt
+# face = Kenneth_Geisshirt.png
+# username = kneth
 
-[http://www.computerworld.dk/rss/blog/nerd]
-Name = Kenneth Geisshirt
-face = Kenneth_Geisshirt.png
-username = kneth
+# [http://www.computerworld.dk/rss/blog/nerd]
+# Name = Kenneth Geisshirt
+# face = Kenneth_Geisshirt.png
+# username = kneth
 
 [http://blog.klavsen.info/rss.xml]
 name = Klavs Klavsen
