Add F3's new blog feed.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -96,9 +96,9 @@ name = Erwin Lansing
 [http://mosehansen.dk/blog/articles.rss]
 name = Esben Mose Hansen
 
-#[http://blog.batmule.dk/cgi-bin/mt/mt-search.cgi?tag=osdk&Template=feed&IncludeBlogs=2&limit=20]
-#name = Flemming Jacobsen
-#username = F3
+[http://blog.batmule.dk/tags/osdk/index.atom]
+name = Flemming Jacobsen
+username = F3
 
 [http://freso.dk/da/planet/opensource_dk/feed]
 name = Frederik S. Olesen
