added v2 feed for lars sommer

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -186,6 +186,10 @@ Name = Kristian Nielsen
 name = Lars Sommer
 username = lasg
 
+[http://www.version2.dk/taxonomy/term/918/rss]
+name = Lars Sommer
+username = lasg
+
 [http://lodahl.blogspot.com/feeds/posts/default]
 Name = Leif Lodahl
 
