Update own URL.

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -43,9 +43,9 @@ facewidth = 65
 faceheight = 85
 
 # Weblogs to aggregate:
-[http://www.ahfaeroey.org/feeds/atom/]
+[http://ahf.me/rss]
 name = Alexander Færøy
-username = ahf a.k.a. eroyf
+username = ahf
 face = eroyf.png
 facewidth = 74
 faceheight = 101
