--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -150,10 +150,10 @@ face = nyerup.png
 [http://codeposts.blogspot.com/feeds/posts/default]
 Name = Kenneth Christiansen
 
-# [http://blog.geekclub.dk/author/kneth/feed/]
-# Name = Kenneth Geisshirt
-# face = Kenneth_Geisshirt.png
-# username = kneth
+[http://kenneth.geisshirt.dk/feeds/posts/default]
+Name = Kenneth Geisshirt
+face = Kenneth_Geisshirt.png
+username = kneth
 
 # [http://www.computerworld.dk/rss/blog/nerd]
 # Name = Kenneth Geisshirt
