--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -147,6 +147,9 @@ name = Jesper Nyerup
 username = nyerup
 face = nyerup.png
 
+[http://feeds.feedburner.com/JosefAssad]
+name = Josef Assad
+
 [http://codeposts.blogspot.com/feeds/posts/default]
 Name = Kenneth Christiansen
 
