added Lars Knudsen

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -169,6 +169,9 @@ name = Kristian Høgsberg
 [http://kristiannielsen.livejournal.com/data/atom]
 Name = Kristian Nielsen
 
+[http://blog.dothisathome.com/feeds/posts/default]
+Name = Lars Knudsen
+
 [http://lasg.dk/blog/category/open-source/feed]
 name = Lars Sommer
 username = lasg
