--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -163,6 +163,9 @@ username = kneth
 # face = Kenneth_Geisshirt.png
 # username = kneth
 
+[http://blog.klavsen.info/rss.xml]
+name = Klavs Klavsen
+
 [http://hoegsberg.blogspot.com/feeds/posts/default?alt=rss]
 name = Kristian Høgsberg
 
