brothers new blog collection feed

--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -227,15 +227,20 @@ name = Peter Larsen
 username = czar
 face = czar.png
 
-[http://peter.makholm.net/feed/]
+[http://peter.makholm.net/blogs/atom.xml]
 name = Peter Makholm
 username = brother
 face = brother.png
 
-[http://www.version2.dk/taxonomy/term/317/rss]
-name = Peter Makholm
-username = brother
-face = brother.png
+# [http://peter.makholm.net/feed/]
+# name = Peter Makholm
+# username = brother
+# face = brother.png
+
+# [http://www.version2.dk/taxonomy/term/317/rss]
+# name = Peter Makholm
+# username = brother
+# face = brother.png
 
 [http://www.rude.net/blog/?feed=atom]
 name = Peter Rude
