--- a/config/sslug.ini
+++ b/config/sslug.ini
@@ -115,6 +115,10 @@ face = brix.jpg
 name = Henrik Lund Kramshøj
 username = hlkv6
 
+[http://tudb.org/atom.xml]
+name = Henrik Tudborg
+username = tbug
+
 #[http://edb.jacob-sparre.dk/sslug-blog.rss2]
 #name = Jacob Sparre Andersen
 #username = sparre
